--- a/course/pom.xml
+++ b/course/pom.xml
@@ -1,43 +1,42 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-
 	<modelVersion>4.0.0</modelVersion>
-
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.4.RELEASE</version>
+		<version>3.2.5</version>
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-
-	<groupId>io.github.Hellen159</groupId>
-	<artifactId>vendas</artifactId>
+	<groupId>com.educandoweb</groupId>
+	<artifactId>course</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-
+	<name>course</name>
+	<description>Demo project for Spring Boot</description>
+	<properties>
+		<java.version>17</java.version>
+	</properties>
 	<dependencies>
-		<!-- started spring boot-->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
-		</dependency>
-
-		<!-- started web-->
+		<!-- SPRING PARA WEB -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
-		<!-- started jpa-->
+		<!-- SPRING PARA BANCO DE DADOS JPA-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-
-		<!-- started banco de dados h2-->
+		
+		<!-- SPRING PARA O H2-->
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
 		</dependency>
+
 
 	</dependencies>
 
